# BTW-daemon

./: Cargo.toml  README.md  example.env
src/: llm.rs  main.rs  net.rs  search.rs  ui.rs
