[package]
name = "btwd"
version = "0.1.0"
edition = "2021"
authors = ["btw maintainer <bumblebee4ever02@gmail.com>"]
description = "btwd: minimal voice assistant for arch linux"
license = "MIT"

[[bin]]
name = "btwd"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenvy = "0.15"
xdg = "2.5"
cpal = "0.15"
webrtc-vad = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2.1"

[build-dependencies]
bindgen = "0.69"

